# Aryiele

./: .gitignore  .gitmodules  Aryiele.sublime-project  Aryiele.sublime-workspace  CMakeLists.txt  LICENSE  README.md
Sources/: CMakeLists.txt
Sources/Aryiele/: CMakeLists.txt  Main.cpp
Sources/Aryiele/AST/: Argument.cpp  Argument.h  ExpressionBinaryOperationNode.cpp  ExpressionBinaryOperationNode.h  ExpressionBooleanNode.cpp  ExpressionBooleanNode.h  ExpressionDoubleNode.cpp  ExpressionDoubleNode.h  ExpressionFunctionCallNode.cpp  ExpressionFunctionCallNode.h  ExpressionFunctionReturnNode.cpp  ExpressionFunctionReturnNode.h  ExpressionIfNode.cpp  ExpressionIfNode.h  ExpressionIntegerNode.cpp  ExpressionIntegerNode.h  ExpressionNode.cpp  ExpressionNode.h  ExpressionStringNode.cpp  ExpressionStringNode.h  ExpressionVariableNode.cpp  ExpressionVariableNode.h  FunctionNode.cpp  FunctionNode.h  Node.cpp  Node.h  Nodes.h  Variable.cpp  Variable.h
Sources/Aryiele/AST/Nodes/: Node.cpp  Node.h  NodeConstantDouble.cpp  NodeConstantDouble.h  NodeConstantInteger.cpp  NodeConstantInteger.h  NodeFunction.cpp  NodeFunction.h  NodeFunctionDefinition.cpp  NodeFunctionDefinition.h  NodeFunctionPrototype.cpp  NodeFunctionPrototype.h  NodeOperationBinary.cpp  NodeOperationBinary.h  NodeStatementBlock.cpp  NodeStatementBlock.h  NodeStatementFunctionCall.cpp  NodeStatementFunctionCall.h  NodeStatementIf.cpp  NodeStatementIf.h  NodeStatementReturn.cpp  NodeStatementReturn.h  NodeStatementVariableDeclaration.cpp  NodeStatementVariableDeclaration.h  NodeVariable.cpp  NodeVariable.h
Sources/Aryiele/CodeGeneration/: CodeGenerator.cpp  CodeGenerator.h
Sources/Aryiele/CodeGenerator/: Block.cpp  Block.h  BlockStack.cpp  BlockStack.h  CodeGenerator.cpp  CodeGenerator.h  Function.cpp  Function.h  FunctionArgument.cpp  FunctionArgument.h  GenerationError.cpp  GenerationError.h  Variable.cpp  Variable.h  VariableStack.cpp  VariableStack.h
Sources/Aryiele/Core/: Includes.h  Logger.h
Sources/Aryiele/Include/Aryiele/: Common.h
Sources/Aryiele/Include/Aryiele/AST/: Argument.h  Nodes.h  Variable.h
Sources/Aryiele/Include/Aryiele/AST/Nodes/: Node.h  NodeConstantArray.h  NodeConstantBoolean.h  NodeConstantCharacter.h  NodeConstantDouble.h  NodeConstantInteger.h  NodeConstantString.h  NodeFunction.h  NodeLiteralArray.h  NodeLiteralBoolean.h  NodeLiteralCharacter.h  NodeLiteralNumberFloating.h  NodeLiteralNumberInteger.h  NodeLiteralString.h  NodeNamespace.h  NodeOperationBinary.h  NodeOperationTernary.h  NodeOperationUnary.h  NodeParentIdentifier.h  NodeRoot.h  NodeStatementArrayCall.h  NodeStatementBlock.h  NodeStatementBreak.h  (+14 more)
Sources/Aryiele/Include/Aryiele/CodeGenerator/: Block.h  BlockStack.h  BlockVariable.h  CodeGenerator.h  Function.h  FunctionArgument.h  GenerationError.h
Sources/Aryiele/Include/Aryiele/Core/: Includes.h  Logger.h
Sources/Aryiele/Include/Aryiele/Lexer/: Lexer.h  LexerTable.h  LexerToken.h  LexerTokens.h
Sources/Aryiele/Include/Aryiele/Parser/: Parser.h  ParserInformation.h  ParserToken.h  ParserTokens.h
Sources/Aryiele/Include/Aryiele/Utility/: Logger.h
Sources/Aryiele/Lexer/: Lexer.cpp  Lexer.h  LexerTable.h  LexerToken.cpp  LexerToken.h  LexerTokens.h
Sources/Aryiele/Parser/: Parser.cpp  Parser.h  ParserDumpTreeNode.cpp  ParserDumpTreeNode.h  ParserInformation.cpp  ParserInformation.h  ParserPrecedence.cpp  ParserPrecedence.h  ParserToken.cpp  ParserToken.h  ParserTokens.h
Sources/Aryiele/Parser/AST/: Argument.cpp  ExpressionBinaryOperationNode.cpp  ExpressionBinaryOperationNode.h  ExpressionBooleanNode.cpp  ExpressionBooleanNode.h  ExpressionDoubleNode.cpp  ExpressionDoubleNode.h  ExpressionFunctionCallNode.cpp  ExpressionFunctionCallNode.h  ExpressionFunctionReturnNode.cpp  ExpressionFunctionReturnNode.h  ExpressionIntegerNode.cpp  ExpressionIntegerNode.h  ExpressionNode.cpp  ExpressionNode.h  ExpressionStringNode.cpp  ExpressionStringNode.h  ExpressionVariableNode.cpp  ExpressionVariableNode.h  FunctionNode.cpp  FunctionNode.h  FunctionPrototypeNode.cpp  FunctionPrototypeNode.h  Node.cpp  Node.h
Sources/Aryiele/Sources/AST/: Argument.cpp  CLIOption.cpp  Variable.cpp
Sources/Aryiele/Sources/AST/Nodes/: Node.cpp  NodeConstantArray.cpp  NodeConstantBoolean.cpp  NodeConstantCharacter.cpp  NodeConstantDouble.cpp  NodeConstantInteger.cpp  NodeConstantString.cpp  NodeFunction.cpp  NodeLiteralArray.cpp  NodeLiteralBoolean.cpp  NodeLiteralCharacter.cpp  NodeLiteralNumberFloating.cpp  NodeLiteralNumberInteger.cpp  NodeLiteralString.cpp  NodeNamespace.cpp  NodeOperationBinary.cpp  NodeOperationTernary.cpp  NodeOperationUnary.cpp  NodeParentIdentifier.cpp  NodeRoot.cpp  NodeStatementArrayCall.cpp  NodeStatementBlock.cpp  NodeStatementBreak.cpp  NodeStatementCase.cpp  NodeStatementContinue.cpp  NodeStatementFor.cpp  NodeStatementFunctionCall.cpp  NodeStatementIf.cpp  NodeStatementReturn.cpp  NodeStatementSwitch.cpp  NodeStatementVariable.cpp  NodeStatementVariableDeclaration.cpp  NodeStatementWhile.cpp  NodeTopFile.cpp  NodeTopFunction.cpp  NodeTopNamespace.cpp  NodeVariable.cpp
Sources/Aryiele/Sources/CodeGenerator/: Block.cpp  BlockStack.cpp  BlockVariable.cpp  CodeGenerator.cpp  Function.cpp  FunctionArgument.cpp  GenerationError.cpp
Sources/Aryiele/Sources/Lexer/: Lexer.cpp  LexerToken.cpp
Sources/Aryiele/Sources/Parser/: Parser.cpp  ParserInformation.cpp  ParserToken.cpp
Sources/Aryiele/Tokenizer/: Token.cpp  Token.h  TokenPrecedence.cpp  TokenPrecedence.h  TokenTable.h  TokenTypes.h  Tokenizer.cpp  Tokenizer.h  TokenizerTable.h  TokenizerToken.cpp  TokenizerToken.h  TokenizerTokens.h
Sources/STD/: CMakeLists.txt
Sources/STD/IO/: Print.cpp  Print.h
Sources/STD/Include/STD/IO/: Print.h
Sources/STD/Sources/IO/: Print.cpp
Sources/Tools/arc/: ARC.cpp  ARC.h  BuildType.h  BuildTypes.h  CMakeLists.txt  Main.cpp
Sources/Tools/arc/Include/ARC/: ARC.h  BuildTypes.h
Sources/Tools/arc/Sources/: ARC.cpp  Main.cpp
Sources/Tools/arc/Sources/Core/: ARC.cpp
Sources/Tools/st3_syntax/: Aryiele.sublime-syntax  build.py  st3_syntax.sublime-project
(+6 files in other folders)
